[package]
name = "lu-derive"
description = "Procedural macros for the lu crate"
license = "MIT"
repository = "https://github.com/jackdotink/lu"
version = "0.2.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }
