[package]
name = "lu"
description = "A library for embedding Luau"
license = "MIT"
repository = "https://github.com/jackdotink/lu"
version = "0.2.0"
edition = "2024"

[dependencies]
libc = "0.2.174"
sys = { version = "0.677.1", path = "../lu-sys", package = "lu-sys" }
derive = { version = "0.2.0", path = "../lu-derive", package = "lu-derive" }
