[package]
name = "lu"
description = "A library for embedding Luau"
license = "MIT"
repository = "https://github.com/jackdotink/lu"
version = "0.5.0"
edition = "2024"

[dependencies]
libc = "0.2"
sys = { version = "0.686", path = "../lu-sys", package = "lu-sys" }
derive = { version = "0.2", path = "../lu-derive", package = "lu-derive" }
